examples/fail/fail_exception_lazy/project.bri
import * as std from "std";

export const project = {
  dependencies: {
    std: "*",
  },
};

export const value = std.memo((): std.Recipe => {
  throw new Error("memo recipe exception");
});

export default () => {
  const result = value();

  return result;
};
